--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,9 @@
 {
-  "outDir": "lib",
-  "declaration": true,
-  "declarationMap": true,
+  "compilerOptions": {
+    "outDir": "lib",
+    "declaration": true,
+    "declarationMap": true,
+  },
   "include": [
     "src"
   ]
